fix spacing between sections

--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,14 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Luckiest Guy', cursive;
-  font-size: 70px;
+  font-size: 50px;
   margin: 30px;
   color: white;
   text-align: center;
 }
 
-h2 {
-  margin: 100px 30px;
+section, article {
+  padding-top: 150px;
 }
 
 /* HEADER */
@@ -51,7 +51,7 @@ header {
 }
 
 #logo img {
-  width: 150px;
+  width: 100px;
   margin: auto;
 }
 
@@ -60,7 +60,6 @@ nav {
   width: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
-  
 }
 
 nav ul{
@@ -143,13 +142,7 @@ nav a:hover, nav a:active {
 /* BIO SECTION */
 
 #bio {
-  margin-top: 300px;
   text-align: center;
-}
-
-#bio h2 {
-  margin: 100px 0;
-  font-size: 65px;
 }
 
 #bio .subject {
@@ -171,10 +164,9 @@ nav a:hover, nav a:active {
 /* HOBBIES SECTION */
 
 #hobbies {
-  margin: 300px auto 0 auto;
+  margin: auto;
   display: flex;
   flex-direction: column;
-  margin-bottom: 300px;
   max-width: 430px;
 }
 
@@ -243,7 +235,6 @@ audio {
 /* PHOTO GALLERY */
 
 #gallery {
-  margin-top: 500px;
   width: auto;
   margin: auto;
   text-align: center;
@@ -251,7 +242,7 @@ audio {
   box-shadow: 
     inset 7px 7px 10px rgba(0, 0, 0, 0.3),
     inset -5px -5px 10px rgba(0, 0, 0, 0.3);
-  padding: 30px;
+  padding: 20px;
   background-color: #CD78EB;
 }
 
@@ -281,7 +272,7 @@ hr {
 /* LIT SECTION */
 
 #lit {
-  margin: 300px auto;
+  margin: auto;
   max-width: 800px;
   background-color: #c7eb78;
   padding: 2rem 2rem;
@@ -349,10 +340,6 @@ hr {
 }
 
 /* MUSIC SECTION */
-
-#tune {
-  margin: 300px 0;
-}
 
 #directions {
   margin: auto;
@@ -446,6 +433,11 @@ footer {
 /*MEDIA QUERIES */
 
 @media screen and (min-width: 60em) {
+
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 70px;
+  }
+
   figure {
     display: grid;
     grid-template-columns: 2fr 1fr;
